--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^5.6.0
   cloud_firestore: ^5.6.9
   google_sign_in: ^6.3.0
+  geolocator: ^11.0.0
+  permission_handler: ^11.0.1
+  google_maps_flutter: ^2.6.0
 
 dev_dependencies:
   flutter_test:
